--- a/index.html
+++ b/index.html
@@ -588,6 +588,8 @@ ROSA MENKMAN + TED DAVIS
 DCT ENCRYPTION STATION ALLOWS YOU TO ENCRYPT MESSAGES IN JPEG FILES BY EXPLOITING ITS COMPRESSION PROCESS. 
 USING YOUR WEBCAM OR UPLOADING A PHOTO, A TEXT MESSAGE CAN TO BE ADDED TO AN IMAGE, INCORPORATING IT INTO BOTH THE VISUAL SURFACE AND THE DATA THAT MAKES UP THE FILE.
 
+THIS WORK CULMINATES ROSA's + TED'S RESEARCH AND HEXPLORATIONS OF THE DCT AND JPEG'S QUANTIZATION TABLE OVER THE PAST 10+ YEARS. 
+BACKGROUND VIDEO COMING SOON...
 
 CREATED FOR GETXOPHOTO 2022
 GETXOPHOTO.COM
